--- a/src/application/application.css
+++ b/src/application/application.css
@@ -1,1 +1,13 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.button{
+    -fx-text-fill: white;
+    -fx-width:50;
+    -fx-height:20;
+    -fx-background-color:lightgreen;
+    -fx-border-radius: 5;
+    -fx-padding: 3 6 6 6;
+    -fx-position:relative;
+    -fx-transition:all 0.25s ease; 
+}
+.start: hover{
+    -fx-background-color:darkgreen;
+}
