--- a/resource/SSFXML.fxml
+++ b/resource/SSFXML.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Ellipse?>
 <?import javafx.scene.shape.Rectangle?>
@@ -26,10 +28,11 @@
             <Font size="31.0" />
          </font>
       </Text>
-      <Text fontSmoothingType="LCD" layoutX="333.0" layoutY="522.0" strokeType="OUTSIDE" strokeWidth="0.0" text="confirm (S)">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Text>
+      <Button fx:id="Confirm" layoutX="373.0" layoutY="495.0" mnemonicParsing="false" onAction="#gameStart" text="Confirm (S)" />
+      <ImageView fx:id="Home" fitHeight="50.0" fitWidth="50.0" layoutX="44.0" layoutY="37.0" onMouseClicked="#goHome">
+         <image>
+            <Image url="@HomeButton.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
