--- a/resource/SSFXML.fxml
+++ b/resource/SSFXML.fxml
@@ -12,17 +12,17 @@
    <children>
       <ImageView fx:id="left" fitHeight="399.0" fitWidth="450.0" layoutX="-156.0" layoutY="100.0">
          <image>
-            <Image url="@theCurseOfProgMeth.png" />
+            <Image url="@Map/theCurseOfProgMeth.png" />
          </image>
       </ImageView>
       <ImageView fx:id="right" fitHeight="400.0" fitWidth="400.0" layoutX="482.0" layoutY="87.0">
          <image>
-            <Image url="@chillbeach.png" />
+            <Image url="@Map/chillbeach.png" />
          </image>
       </ImageView>
       <ImageView fx:id="center" fitHeight="533.34" fitWidth="400.0" layoutX="200.0" layoutY="62.0">
          <image>
-            <Image url="@theNightmareExamRoom.png" />
+            <Image url="@Map/theNightmareExamRoom.png" />
          </image>
       </ImageView>
       <Ellipse fill="WHITE" layoutX="414.0" layoutY="-39.0" radiusX="900.0" radiusY="200.0" stroke="BLACK" strokeType="INSIDE" />
