--- a/resource/optionPage.fxml
+++ b/resource/optionPage.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.OptionController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.OptionController">
    <children>
       <Rectangle fx:id="selected" arcHeight="5.0" arcWidth="5.0" fill="RED" height="310.0" layoutX="45.0" layoutY="129.0" stroke="BLACK" strokeType="INSIDE" width="210.0" />
       <ImageView fx:id="left" fitHeight="300.0" fitWidth="200.0" layoutX="50.0" layoutY="134.0">
