--- a/resource/optionPage.fxml
+++ b/resource/optionPage.fxml
@@ -13,17 +13,17 @@
       <Rectangle fx:id="selected" arcHeight="5.0" arcWidth="5.0" fill="RED" height="310.0" layoutX="45.0" layoutY="129.0" stroke="BLACK" strokeType="INSIDE" width="210.0" />
       <ImageView fx:id="left" fitHeight="300.0" fitWidth="200.0" layoutX="50.0" layoutY="134.0">
          <image>
-            <Image url="@optionCard/atk+.png" />
+            <Image url="@optionCard/default.png" />
          </image>
       </ImageView>
       <ImageView fx:id="center" fitHeight="300.0" fitWidth="200.0" layoutX="300.0" layoutY="134.0">
          <image>
-            <Image url="@optionCard/barrier.png" />
+            <Image url="@optionCard/default.png" />
          </image>
       </ImageView>
       <ImageView fx:id="right" fitHeight="300.0" fitWidth="200.0" layoutX="550.0" layoutY="134.0">
          <image>
-            <Image url="@optionCard/Bspeed.png" />
+            <Image url="@optionCard/default.png" />
          </image>
       </ImageView>
       <Text fill="#f2ff00" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LEVEL UP!!" textAlignment="CENTER" wrappingWidth="800.0">
